--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,6 +1,6 @@
 CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = awsomephonebook
+NAME = phonebook
 
 SRC_FILES = PhoneBook.cpp
 OBJECTS = $(SRC_FILES:%.c=$(OBJ_DIR)/%.o)
