add contructor, destr and get/set functions

--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -2,7 +2,7 @@ CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = phonebook
 
-SRC_FILES = PhoneBook.cpp
+SRC_FILES = PhoneBook.cpp Contacts.cpp
 OBJECTS = $(SRC_FILES:%.c=$(OBJ_DIR)/%.o)
 
 NO_COLOR = \033[0m
