edited executable file name

--- a/cpp05/ex02/Makefile
+++ b/cpp05/ex02/Makefile
@@ -1,6 +1,6 @@
 CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = form
+NAME = aform
 
 SRC_FILES = main.cpp Bureaucrat.cpp AForm.cpp ShrubberyCreationForm.cpp RobotomyRequestForm.cpp PresidentialPardonForm.cpp
 OBJECTS = $(SRC_FILES:%.c=$(OBJ_DIR)/%.o)
