--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -2,7 +2,7 @@ CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = base
 
-SRC_FILES = main.cpp functions.cpp Base.cpp
+SRC_FILES = main.cpp Functions.cpp Base.cpp
 OBJECTS = $(SRC_FILES:%.c=$(OBJ_DIR)/%.o)
 
 NO_COLOR = \033[0m
